--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,8 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>One Year Journal</title>    
+    <title>One Year Journal: Cosmic Edition</title>
+    <meta name="description" content="A beautiful, open-source daily journal app with a cosmic aesthetic. Plant memories among the stars." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet" />
